Issue Fixed: Z-Index for Popover box is terminated, Order of Skills are placed according to Year Timeline.

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -422,3 +422,6 @@ li[data-position="90"] {
     float: right;
     padding: 7px;
 }
+.popover {
+    z-index: 0;
+}
